--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "gulp-load-plugins": "^1.4.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.0",
+    "lodash-webpack-plugin": "^0.11.2",
     "node-sass": "^4.5.0",
     "open-browser-webpack-plugin": "0.0.2",
     "opn": "^4.0.2",
@@ -75,6 +76,7 @@
     "url-loader": "^0.5.7",
     "vue-loader": "^9.7.0",
     "webpack": "^1.13.3",
+    "webpack-chunk-hash": "^0.4.0",
     "webpack-config": "^6.2.1",
     "webpack-dev-server": "^1.16.2",
     "webpack-hot-middleware": "^2.13.1",
