--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "gulp-load-plugins": "^1.4.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.0",
+    "image-webpack-loader": "^3.3.0",
     "lodash-webpack-plugin": "^0.11.2",
     "node-sass": "^4.5.0",
     "open-browser-webpack-plugin": "0.0.2",
