--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dynamics.js": "^1.1.5",
     "fastclick": "^1.0.6",
     "iscroll": "^5.2.0",
+    "js-cookie": "^2.1.3",
     "keymirror": "^0.1.1",
     "lodash": "^4.17.4",
     "mint-ui": "^2.1.0",
