--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a vue webpack template",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./build/webpack.dev.conf.js",
-    "release": "gulp",
+    "dev": "webpack-dev-server --config ./build/webpack.dev.conf.js",
+    "build": "gulp",
     "server": "node build/server.js",
     "lint": "eslint 'src/**/*.@(js|jsx|es)'",
     "test": "echo \"Error: no test specified\" && exit 1",
