--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mint-ui": "^2.1.0",
     "mockjs": "^1.0.0",
     "vue": "^2.0.3",
+    "vue-easy-toast": "^1.0.0",
     "vue-resource": "^1.2.0",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
@@ -53,6 +54,7 @@
     "clean-webpack-plugin": "^0.1.13",
     "copy-webpack-plugin": "^4.0.0",
     "css-loader": "^0.25.0",
+    "eruda": "^1.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
