--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a vue webpack template",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --config ./build/webpack.dev.conf.js",
     "release": "gulp",
     "server": "node build/server.js",
     "lint": "eslint 'src/**/*.@(js|jsx|es)'",
