--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "opn": "^4.0.2",
     "ora": "^0.3.0",
     "path": "^0.12.7",
+    "postcss-assets": "^4.2.0",
     "postcss-flexible": "^0.4.1",
     "postcss-loader": "^1.1.0",
     "postcss-plugin-px2rem": "^0.7.0",
