--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "a vue webpack template",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./build/webpack.dev.conf.js",
+    "server": "webpack-dev-server --config ./build/webpack.dev.conf.js",
     "build": "gulp",
-    "server": "node build/server.js",
+    "dev": "node build/server.js",
     "lint": "eslint 'src/**/*.@(js|jsx|es)'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "bs": "cd dist && browser-sync start --server --directory"
