--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "vue-resource": "^1.2.0",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
-    "vuex-router-sync": "^3.0.0"
+    "vuex-router-sync": "^3.0.0",
+    "we-vue-slider": "^0.0.2"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.0",
